--- a/taixinkanghu/src/main/res/values/styles.xml
+++ b/taixinkanghu/src/main/res/values/styles.xml
@@ -51,4 +51,12 @@
         <item name="android:backgroundDimEnabled">false</item>
 
     </style>
+
+    <style name="dateStyle">
+        <item name="android:layout_width">fill_parent</item>
+        <item name="android:layout_height">fill_parent</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textSize">16sp</item>
+    </style>
 </resources>
