--- a/taixinkanghu/src/main/res/layout/activity_about_us.xml
+++ b/taixinkanghu/src/main/res/layout/activity_about_us.xml
@@ -1,148 +1,150 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/title"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="match_parent">
 
-    <include layout="@layout/include_header" />
-
-    <ScrollView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-        <LinearLayout
+        <include layout="@layout/include_header" />
+
+        <ScrollView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center_horizontal"
-            android:orientation="vertical">
-
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginRight="10.0dip"
-                android:layout_marginTop="60.0dip"
-                android:src="@mipmap/logo_img" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="60.0dip"
-                android:layout_marginTop="10.0dip"
-                android:text="v1.1 for Android"
-                android:textColor="@color/text_color_gray"
-                android:textSize="18.0sp" />
+            android:layout_weight="1">
 
             <LinearLayout
-                android:id="@id/item1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/bg_order_btn"
-                android:gravity="center_vertical"
-                android:orientation="horizontal"
-                android:paddingBottom="15.0dip"
-                android:paddingTop="15.0dip">
+                android:gravity="center_horizontal"
+                android:orientation="vertical">
 
-                <TextView
-                    android:id="@+id/title"
+                <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1.0"
-                    android:textColor="@color/text_color_black"
-                    android:textSize="16.0sp"
-                    android:text="公司介绍" />
+                    android:layout_marginRight="10.0dip"
+                    android:layout_marginTop="60.0dip"
+                    android:src="@mipmap/logo_img" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text=">"
+                    android:layout_marginBottom="60.0dip"
+                    android:layout_marginTop="10.0dip"
+                    android:text="v1.1 for Android"
                     android:textColor="@color/text_color_gray"
                     android:textSize="18.0sp" />
+
+                <LinearLayout
+                    android:id="@id/item1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/bg_order_btn"
+                    android:gravity="center_vertical"
+                    android:orientation="horizontal"
+                    android:paddingBottom="15.0dip"
+                    android:paddingTop="15.0dip">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1.0"
+                        android:text="公司介绍"
+                        android:textColor="@color/text_color_black"
+                        android:textSize="16.0sp" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text=">"
+                        android:textColor="@color/text_color_gray"
+                        android:textSize="18.0sp" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@id/item2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/bg_order_btn"
+                    android:gravity="center_vertical"
+                    android:orientation="horizontal"
+                    android:paddingBottom="15.0dip"
+                    android:paddingTop="15.0dip">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1.0"
+                        android:text="服务介绍"
+                        android:textColor="@color/text_color_black"
+                        android:textSize="16.0sp" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text=">"
+                        android:textColor="@color/text_color_gray"
+                        android:textSize="18.0sp" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@id/item3"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/bg_order_btn"
+                    android:gravity="center_vertical"
+                    android:orientation="horizontal"
+                    android:paddingBottom="15.0dip"
+                    android:paddingTop="15.0dip">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1.0"
+                        android:text="护理员级别"
+                        android:textColor="@color/text_color_black"
+                        android:textSize="16.0sp" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text=">"
+                        android:textColor="@color/text_color_gray"
+                        android:textSize="18.0sp" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@id/item4"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/bg_order_btn"
+                    android:gravity="center_vertical"
+                    android:orientation="horizontal"
+                    android:paddingBottom="15.0dip"
+                    android:paddingTop="15.0dip">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1.0"
+                        android:text="常见问题"
+                        android:textColor="@color/text_color_black"
+                        android:textSize="16.0sp" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text=">"
+                        android:textColor="@color/text_color_gray"
+                        android:textSize="18.0sp" />
+                </LinearLayout>
             </LinearLayout>
+        </ScrollView>
 
-            <LinearLayout
-                android:id="@id/item2"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/bg_order_btn"
-                android:gravity="center_vertical"
-                android:orientation="horizontal"
-                android:paddingBottom="15.0dip"
-                android:paddingTop="15.0dip">
-
-                <TextView
-                    android:id="@+id/title"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1.0"
-                    android:textColor="@color/text_color_black"
-                    android:textSize="16.0sp"
-                    android:text="服务介绍" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text=">"
-                    android:textColor="@color/text_color_gray"
-                    android:textSize="18.0sp" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@id/item3"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/bg_order_btn"
-                android:gravity="center_vertical"
-                android:orientation="horizontal"
-                android:paddingBottom="15.0dip"
-                android:paddingTop="15.0dip">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1.0"
-                    android:textColor="@color/text_color_black"
-                    android:textSize="16.0sp"
-                    android:text="护理员级别" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text=">"
-                    android:textColor="@color/text_color_gray"
-                    android:textSize="18.0sp" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@id/item4"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/bg_order_btn"
-                android:gravity="center_vertical"
-                android:orientation="horizontal"
-                android:paddingBottom="15.0dip"
-                android:paddingTop="15.0dip">
-
-                <TextView
-                    android:id="@+id/title"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1.0"
-                    android:textColor="@color/text_color_black"
-                    android:textSize="16.0sp"
-                    android:text="常见问题" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text=">"
-                    android:textColor="@color/text_color_gray"
-                    android:textSize="18.0sp" />
-            </LinearLayout>
-        </LinearLayout>
-    </ScrollView>
-
-    <!--底部功能菜单-->
-    <include layout="@layout/item_rg_main"/>
-</LinearLayout>
+        <!--底部功能菜单-->
+        <include layout="@layout/item_rg_main" />
+    </LinearLayout>
+</FrameLayout>
