--- a/taixinkanghu/src/main/res/layout/activity_mine_order.xml
+++ b/taixinkanghu/src/main/res/layout/activity_mine_order.xml
@@ -1,87 +1,102 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/title"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
-
-    <include layout="@layout/include_header" />
+    android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="1"
         android:orientation="vertical">
 
+        <include layout="@layout/include_header" />
 
-        <LinearLayout
-            android:id="@id/item_phone"
+        <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="10.0dip"
-            android:gravity="center_vertical"
-            android:orientation="vertical">
+            android:layout_weight="1">
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="54.0dip"
-                android:layout_marginTop="10.0dip"
-                android:background="@drawable/bg_order_btn"
-                android:gravity="center_vertical"
-                android:orientation="horizontal">
+                android:layout_height="match_parent"
+                android:orientation="vertical">
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1.0"
-                    android:text="筛选条件:"
-                    android:textColor="@color/text_color_black"
-                    android:textSize="16.0sp" />
 
-                <TextView
-                    android:id="@id/phone"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:gravity="right"
-                    android:hint="全部"
-                    android:textColor="@android:color/black"
-                    android:textColorHint="@color/text_color_gray"
-                    android:textSize="20.0sp" />
+                <LinearLayout
+                    android:id="@id/item_phone"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="10.0dip"
+                    android:gravity="center_vertical"
+                    android:orientation="vertical">
 
-                <TextView
-                    android:id="@id/phone_arrow"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="10.0dip"
-                    android:hint="V"
-                    android:textColorHint="@color/text_color_gray"
-                    android:textSize="18.0sp"
-                    android:visibility="visible" />
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="54.0dip"
+                        android:layout_marginTop="10.0dip"
+                        android:background="@drawable/bg_order_btn"
+                        android:gravity="center_vertical"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1.0"
+                            android:text="筛选条件:"
+                            android:textColor="@color/text_color_black"
+                            android:textSize="16.0sp" />
+
+                        <TextView
+                            android:id="@id/phone"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:gravity="right"
+                            android:hint="全部"
+                            android:textColor="@android:color/black"
+                            android:textColorHint="@color/text_color_gray"
+                            android:textSize="20.0sp" />
+
+                        <TextView
+                            android:id="@id/phone_arrow"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="10.0dip"
+                            android:hint="V"
+                            android:textColorHint="@color/text_color_gray"
+                            android:textSize="18.0sp"
+                            android:visibility="visible" />
+
+
+                    </LinearLayout>
+
+                    <!--<ListView-->
+                    <!--android:layout_width="match_parent"-->
+                    <!--android:layout_height="match_parent"-->
+                    <!--android:gravity="center_vertical">-->
+
+
+                    <!--</ListView>-->
+
+                    <include layout="@layout/item_order_info" />
+
+                    <include layout="@layout/item_order_info" />
+
+                    <include layout="@layout/item_order_info" />
+
+                    <include layout="@layout/item_order_info" />
+
+                    <include layout="@layout/item_order_info" />
+
+                    <include layout="@layout/item_order_info" />
+
+                </LinearLayout>
 
 
             </LinearLayout>
+        </ScrollView>
 
-            <!--<ListView-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="match_parent"-->
-                <!--android:gravity="center_vertical">-->
-
-
-            <!--</ListView>-->
-
-            <include layout="@layout/item_order_info"/>
-            <include layout="@layout/item_order_info"/>
-            <include layout="@layout/item_order_info"/>
-            <include layout="@layout/item_order_info"/>
-            <include layout="@layout/item_order_info"/>
-            <include layout="@layout/item_order_info"/>
-
-        </LinearLayout>
-
-
+        <include layout="@layout/item_rg_main" />
     </LinearLayout>
-
-    <include layout="@layout/item_rg_main" />
-
-</LinearLayout>
+</FrameLayout>
 
 
