--- a/taixinkanghu/src/main/res/layout/activity_reviews.xml
+++ b/taixinkanghu/src/main/res/layout/activity_reviews.xml
@@ -67,7 +67,7 @@
 
     </RadioGroup>
 
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1"
@@ -112,8 +112,8 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dip"
                 android:layout_marginBottom="10dip"
+                android:layout_marginTop="10dip"
                 android:text="相关评论000000000000000000000000000000000000000"
                 android:textSize="14dip" />
 
@@ -131,266 +131,258 @@
                 android:layout_marginBottom="10dip"
                 android:text="下订单时间：2015-16-14 10:40"
                 android:textSize="14dip" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@drawable/bg_order_btn"
-            android:layout_marginTop="15dip"
-            android:orientation="vertical">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dip"
-                android:orientation="horizontal">
+                android:layout_marginTop="15dip"
+                android:background="@drawable/bg_order_btn"
+                android:orientation="vertical">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dip"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="15********6"
+                        android:textSize="14dip" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="评价时间：2015-06-24 00:42"
+                        android:textSize="14dip" />
+
+
+                </LinearLayout>
+
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="0.5dip"
+                    android:background="#99000000"
+                    android:textSize="14dip" />
+
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="15********6"
+                    android:layout_marginBottom="10dip"
+                    android:layout_marginTop="10dip"
+                    android:text="相关评论000000000000000000000000000000000000000"
                     android:textSize="14dip" />
+
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="0.5dip"
+                    android:background="#99000000"
+                    android:textSize="14dip" />
+
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="评价时间：2015-06-24 00:42"
+                    android:layout_marginBottom="10dip"
+                    android:text="下订单时间：2015-16-14 10:40"
                     android:textSize="14dip" />
-
 
             </LinearLayout>
-
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="0.5dip"
-                android:background="#99000000"
-                android:textSize="14dip" />
-
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dip"
-                android:layout_marginBottom="10dip"
-                android:text="相关评论000000000000000000000000000000000000000"
-                android:textSize="14dip" />
-
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="0.5dip"
-                android:background="#99000000"
-                android:textSize="14dip" />
-
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="10dip"
-                android:text="下订单时间：2015-16-14 10:40"
-                android:textSize="14dip" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@drawable/bg_order_btn"
-            android:layout_marginTop="15dip"
-            android:orientation="vertical">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dip"
-                android:orientation="horizontal">
+                android:layout_marginTop="15dip"
+                android:background="@drawable/bg_order_btn"
+                android:orientation="vertical">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dip"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="15********6"
+                        android:textSize="14dip" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="评价时间：2015-06-24 00:42"
+                        android:textSize="14dip" />
+
+
+                </LinearLayout>
+
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="0.5dip"
+                    android:background="#99000000"
+                    android:textSize="14dip" />
+
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="15********6"
+                    android:layout_marginBottom="10dip"
+                    android:layout_marginTop="10dip"
+                    android:text="相关评论000000000000000000000000000000000000000"
                     android:textSize="14dip" />
+
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="0.5dip"
+                    android:background="#99000000"
+                    android:textSize="14dip" />
+
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="评价时间：2015-06-24 00:42"
+                    android:layout_marginBottom="10dip"
+                    android:text="下订单时间：2015-16-14 10:40"
                     android:textSize="14dip" />
-
 
             </LinearLayout>
-
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="0.5dip"
-                android:background="#99000000"
-                android:textSize="14dip" />
-
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dip"
-                android:layout_marginBottom="10dip"
-                android:text="相关评论000000000000000000000000000000000000000"
-                android:textSize="14dip" />
-
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="0.5dip"
-                android:background="#99000000"
-                android:textSize="14dip" />
-
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="10dip"
-                android:text="下订单时间：2015-16-14 10:40"
-                android:textSize="14dip" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@drawable/bg_order_btn"
-            android:layout_marginTop="15dip"
-            android:orientation="vertical">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dip"
-                android:orientation="horizontal">
+                android:layout_marginTop="15dip"
+                android:background="@drawable/bg_order_btn"
+                android:orientation="vertical">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dip"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="15********6"
+                        android:textSize="14dip" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="评价时间：2015-06-24 00:42"
+                        android:textSize="14dip" />
+
+
+                </LinearLayout>
+
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="0.5dip"
+                    android:background="#99000000"
+                    android:textSize="14dip" />
+
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="15********6"
+                    android:layout_marginBottom="10dip"
+                    android:layout_marginTop="10dip"
+                    android:text="相关评论000000000000000000000000000000000000000"
                     android:textSize="14dip" />
+
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="0.5dip"
+                    android:background="#99000000"
+                    android:textSize="14dip" />
+
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="评价时间：2015-06-24 00:42"
+                    android:layout_marginBottom="10dip"
+                    android:text="下订单时间：2015-16-14 10:40"
                     android:textSize="14dip" />
-
 
             </LinearLayout>
-
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="0.5dip"
-                android:background="#99000000"
-                android:textSize="14dip" />
-
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dip"
-                android:layout_marginBottom="10dip"
-                android:text="相关评论000000000000000000000000000000000000000"
-                android:textSize="14dip" />
-
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="0.5dip"
-                android:background="#99000000"
-                android:textSize="14dip" />
-
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="10dip"
-                android:text="下订单时间：2015-16-14 10:40"
-                android:textSize="14dip" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@drawable/bg_order_btn"
-            android:orientation="vertical">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dip"
-                android:orientation="horizontal">
+                android:background="@drawable/bg_order_btn"
+                android:orientation="vertical">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dip"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="15********6"
+                        android:textSize="14dip" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="评价时间：2015-06-24 00:42"
+                        android:textSize="14dip" />
+
+
+                </LinearLayout>
+
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="0.5dip"
+                    android:background="#99000000"
+                    android:textSize="14dip" />
+
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="15********6"
+                    android:layout_marginBottom="10dip"
+                    android:layout_marginTop="10dip"
+                    android:text="相关评论000000000000000000000000000000000000000"
                     android:textSize="14dip" />
+
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="0.5dip"
+                    android:background="#99000000"
+                    android:textSize="14dip" />
+
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="评价时间：2015-06-24 00:42"
+                    android:layout_marginBottom="10dip"
+                    android:text="下订单时间：2015-16-14 10:40"
                     android:textSize="14dip" />
-
 
             </LinearLayout>
-
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="0.5dip"
-                android:background="#99000000"
-                android:textSize="14dip" />
-
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dip"
-                android:layout_marginBottom="10dip"
-                android:text="相关评论000000000000000000000000000000000000000"
-                android:textSize="14dip" />
-
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="0.5dip"
-                android:background="#99000000"
-                android:textSize="14dip" />
-
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="10dip"
-                android:text="下订单时间：2015-16-14 10:40"
-                android:textSize="14dip" />
-
         </LinearLayout>
+    </ScrollView>
 
 
-    </LinearLayout>
-
-
-    <!--<android.support.v7.widget.RecyclerView-->
-    <!--android:id="@+id/recyclerview"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="match_parent"-->
-    <!--android:background="#0f0"-->
-    <!--android:layout_weight="1.0">-->
+    <!--<android.support.v7.widget.RecyclerView--><!--android:id="@+id/recyclerview"--><!--android:layout_width="match_parent"--><!--android:layout_height="match_parent"--><!--android:background="#0f0"--><!--android:layout_weight="1.0">-->
 
     <!--</android.support.v7.widget.RecyclerView>-->
 
