--- a/taixinkanghu/src/main/res/layout/fragment_select_screening.xml
+++ b/taixinkanghu/src/main/res/layout/fragment_select_screening.xml
@@ -13,6 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1.0"
+        android:background="#fff"
         android:orientation="horizontal">
 
         <ListView
