--- a/taixinkanghu/src/main/res/layout/item_main_list.xml
+++ b/taixinkanghu/src/main/res/layout/item_main_list.xml
@@ -1,22 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/linearLayout1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/linearLayout1"
     android:orientation="vertical">
 
     <Button
+        android:id="@+id/ib_text"
         android:layout_width="400dp"
         android:layout_height="100dp"
-        android:id="@+id/ib_text"
+        android:layout_gravity="center_horizontal"
         android:background="#fff"
-        android:textColor="@color/main_color"
-        android:layout_gravity="center_horizontal"/>
+        android:text="11111111111"
+        android:textColor="@color/main_color" />
 
     <ImageView
+        android:id="@+id/ib_line"
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="@color/main_color"
-        android:id="@+id/ib_line"/>
+        android:background="@color/main_color" />
 
 </LinearLayout>
