--- a/taixinkanghu/src/main/res/layout/activity_main.xml
+++ b/taixinkanghu/src/main/res/layout/activity_main.xml
@@ -1,4 +1,4 @@
-<android.support.v4.app.FragmentTabHost
+<com.taixinkanghu.widget.fragmenttabhostex.FragmentTabHostEx
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	android:id="@android:id/tabhost"
 	android:layout_width="match_parent"
@@ -24,4 +24,4 @@
 			android:orientation="horizontal" />
 
 	</LinearLayout>
-</android.support.v4.app.FragmentTabHost>
+</com.taixinkanghu.widget.fragmenttabhostex.FragmentTabHostEx>
