[modify]添加相关页面链接

--- a/taixinkanghu/src/main/res/layout/activity_about_us.xml
+++ b/taixinkanghu/src/main/res/layout/activity_about_us.xml
@@ -39,7 +39,7 @@
                     android:textSize="18.0sp" />
 
                 <LinearLayout
-                    android:id="@id/item1"
+                    android:id="@id/company_info"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@drawable/bg_order_btn"
@@ -65,7 +65,7 @@
                 </LinearLayout>
 
                 <LinearLayout
-                    android:id="@id/item2"
+                    android:id="@id/service_introduction"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@drawable/bg_order_btn"
@@ -91,7 +91,7 @@
                 </LinearLayout>
 
                 <LinearLayout
-                    android:id="@id/item3"
+                    android:id="@id/worker_level"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@drawable/bg_order_btn"
@@ -117,7 +117,7 @@
                 </LinearLayout>
 
                 <LinearLayout
-                    android:id="@id/item4"
+                    android:id="@id/goto_faq"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@drawable/bg_order_btn"
@@ -145,6 +145,6 @@
         </ScrollView>
 
         <!--底部功能菜单-->
-        <include layout="@layout/item_rg_main" />
+        <!--<include layout="@layout/item_rg_main" />-->
     </LinearLayout>
 </FrameLayout>
