--- a/taixinkanghu/src/main/res/layout/activity_my_score.xml
+++ b/taixinkanghu/src/main/res/layout/activity_my_score.xml
@@ -253,7 +253,7 @@
 
 
     <Button
-        android:id="@id/btn_submit"
+        android:id="@id/btn_goto_main"
         android:layout_width="match_parent"
         android:layout_height="48.0dip"
         android:background="@drawable/bg_btn_main_color"
