--- a/taixinkanghu/src/main/res/values/colors.xml
+++ b/taixinkanghu/src/main/res/values/colors.xml
@@ -27,4 +27,5 @@
     <color name="umeng_fb_white">#ffffffff</color>
     <color name="list_selected_back_ground">#10000000</color>
     <color name="list_back_ground">#ffffffff</color>
+    <color name="white">#ffffffff</color>
 </resources>
