--- a/taixinkanghu/src/main/res/values/styles.xml
+++ b/taixinkanghu/src/main/res/values/styles.xml
@@ -20,9 +20,9 @@
 
     <style name="home_radio_button_style">
 
-        <item name="android:textSize">12.0sp</item>
+        <item name="android:textSize">16.0sp</item>
 
-        <item name="android:textColor">#cc0000</item>
+        <item name="android:textColor">@color/main_color</item>
 
         <item name="android:gravity">center</item>
 
