--- a/taixinkanghu/src/main/res/layout/activity_agreement.xml
+++ b/taixinkanghu/src/main/res/layout/activity_agreement.xml
@@ -33,6 +33,7 @@
         </LinearLayout>
 
         <Button
+            android:id="@+id/btn_sure"
             android:layout_width="match_parent"
             android:layout_height="48.0dip"
             android:layout_gravity="bottom"
