--- a/taixinkanghu/src/main/res/layout/activity_customer_service.xml
+++ b/taixinkanghu/src/main/res/layout/activity_customer_service.xml
@@ -21,7 +21,7 @@
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="240dip"
-                android:background="@mipmap/img_company" />
+                android:background="@drawable/img_company" />
 
             <LinearLayout
                 android:id="@+id/call"
