--- a/taixinkanghu/src/main/res/layout/activity_service_info.xml
+++ b/taixinkanghu/src/main/res/layout/activity_service_info.xml
@@ -8,7 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="right|center_vertical"
-        android:background="@mipmap/img_guide1"></android.support.v4.view.ViewPager>
+        android:background="@drawable/ic_activity_welcome"></android.support.v4.view.ViewPager>
 
     <ImageButton
         android:id="@id/btn_back"
