--- a/taixinkanghu/src/main/res/layout/activity_welcome.xml
+++ b/taixinkanghu/src/main/res/layout/activity_welcome.xml
@@ -8,6 +8,6 @@
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@mipmap/img_welcome"/>
+        android:background="@drawable/ic_activity_welcome"/>
 
 </LinearLayout>
