--- a/taixinkanghu/src/main/res/layout/item_order_info.xml
+++ b/taixinkanghu/src/main/res/layout/item_order_info.xml
@@ -78,7 +78,7 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/age"
+                android:id="@+id/startdate"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="right"
@@ -95,7 +95,7 @@
                 android:textSize="13.0sp" />
 
             <TextView
-                android:id="@+id/workYear"
+                android:id="@+id/enddate"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -111,7 +111,7 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/level_name"
+                android:id="@+id/days"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="10.0dip"
